apps/php/k8/openstack/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    selector: php-nginx-node-port
  name: php-nginx
  namespace: k8s-demo
spec:
  type: NodePort
  ports:
  - name: "php-nginx"
    port: 80
  selector:
    selector: php-nginx

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: php-nginx-octavia
  namespace: k8s-demo
  annotations:
    kubernetes.io/ingress.class: "openstack"
    octavia.ingress.kubernetes.io/internal: "false"
spec:
  backend:
    serviceName: php-nginx
    servicePort: 80
